Thu Apr 19 08:47:54 2012  Eric Hodel  <drbrain@segment7.net>

	* io.c (io_readpartial):  Document the output buffer parameter is
	  overwritten with the read contents even when non-empty.
	  Patch by yu nobuoka.  [ruby-trunk - Bug #6285]
	* io.c (io_read_nonblock):  ditto.
	* io.c (io_read):  ditto.
	* io.c (rb_io_sysread):  ditto.
	* io.c (argf_read):  ditto.
	* io.c (argf_readpartial):  ditto.
	* ext/stringio/stringio.c (strio_read):  ditto.
	* test/ruby/test_argf.rb (class TestArgf):  Add test for existing
	  behavior of read outbuf.
	* test/ruby/test_io.rb (class TestIO):  ditto.
	* test/stringio/test_stringio.rb (class TestStringIO):  ditto.

Wed Apr 18 22:58:55 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DOT, DOXYGEN): use AC_CHECK_PROGS instead of
	  AC_CHECK_PROG which needs the third argument.  [ruby-core:44433]
	  [Bug #6316]

	* configure.in (PKG_CONFIG): fix condition to skip older version
	  of pkg-config.  continue in backticks does not affect outside.

Wed Apr 18 13:59:40 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/file.c (INVALID_FILE_ATTRIBUTES): define for old SDK.

Wed Apr 18 10:22:54 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): add an interim digit for
	  the timezone offset which is less than an hour.

Wed Apr 18 09:58:29 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/version.rb:  Fixed init_with warning by calling into
	  yaml_initialize (for syck) from psych's init_with

Wed Apr 18 09:03:43 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 1.8.22 plus r33517 and r35337 which
	  were ported to the rubygems git repository.
	
	  See https://github.com/rubygems/rubygems/blob/1.8/History.txt for
	  changes since 1.8.11.
	* test/rubygems:  ditto.

Tue Apr 17 22:18:48 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): fix padding of time zone
	  offset.  [ruby-dev:43287][Bug #4458]
